--- a/about.html
+++ b/about.html
@@ -48,6 +48,10 @@
         </div>
     </section>
 
+    <div class="field">
+        <div class="mouse"></div>
+    </div>
+
     <section class="who">
         <h1>Who Are We</h1>
         <div class="row">
