--- a/advertise.html
+++ b/advertise.html
@@ -22,10 +22,10 @@
 	<header>
 		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html"><i class='bx bx-home-alt-2'></i>Home</a></li>
-            <li><a href="#"><i class='bx bx-message-alt-add' ></i>Advertise</a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i>Support</a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i>About</a></li>
+            <li><a href="index.html"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="#"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
             <a href="#" class="btn">Login</a>
@@ -109,8 +109,7 @@
                         <a href="details.html">Learn More <i class='bx bxs-chevron-right' ></i></a>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+
                 <div class="rows-1">
                     <img src="assets/img/image 64.png" alt="#">
                     <div class="details">
