--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 	<header>
 		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="#"><i class='bx bx-home-alt-2'></i>Home</a></li>
-            <li><a href="advertise.html"><i class='bx bx-message-alt-add' ></i>Advertise</a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i>Support</a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i>About</a></li>
+            <li><a href="#"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="advertise.html"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
             <a href="#" class="btn">Login</a>
-            <a href="#" class="btn2">Get Started</a>
+            <a href="advertise.html" class="btn2">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
