--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="#" class="btn">Login</a>
-            <a href="advertise.html" class="btn2">Get Started</a>
+            <a href="login.html" class="btn">Login</a>
+            <a href="login.html" class="btn2">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
