--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
         <div class="other">
             <a href="login.html" class="btn">Login</a>
-            <a href="login.html" class="btn2">Get Started</a>
+            <a href="signup.html" class="btn2">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -84,7 +84,7 @@
         <div class="title-sec">
             <h1>Creativity starts with viewing the<br>whole world differently</h1>
             <p>A service agency with customer satisfaction</p>
-            <a href="#" class="getbtn">Get Started</a>
+            <a href="login.html" class="getbtn">Get Started</a>
             <div class="home-img">
                 <img src="assets/img/illustration.png" alt="#">
             </div>
