--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
             <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="#" class="btn">Login</a>
+            <a href="login.html" class="btn">Login</a>
             <a href="#" class="btn2">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
@@ -42,14 +42,16 @@
                 <h1>Let's Get You in!</h1>
                 <p>Login To your Account</p>
                 <form action="#">
+                    <input type="text" placeholder="UserName">
                     <input type="email" placeholder="E-mail">
                     <input type="password" placeholder="Password">
-                    <button type="submit">Login</button>
+                    <input type="password" placeholder="Confirm Password">
+                    <button type="submit">Register</button>
                     <a href="#"><img src="assets/img/google.png" alt="#"><span>Login With Google Account</span></a>
                 </form>
                 <div class="reg">
-                    <h1>Don't Have an Account !</h1>
-                    <a href="signup.html">Sign up</a>
+                    <h1>Already Have an Account !</h1>
+                    <a href="login.html">Sign in</a>
                 </div>
             </div>
             <div class="det">
