--- a/advertise.html
+++ b/advertise.html
@@ -28,8 +28,8 @@
             <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="#" class="btn">Login</a>
-            <a href="#" class="btn2">Get Started</a>
+            <a href="login.html" class="btn">Login</a>
+            <a href="signup.html" class="btn2">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -41,7 +41,7 @@
             <h1>Our Services</h1>
             <h2>Grow your startup with our Service</h2>
             <p>A service agency with customer satisfaction</p>
-            <a href="#" class="getbtn">Get Started</a>
+            <a href="login.html" class="getbtn">Get Started</a>
         </div>
         <div class="adver-img">
             <img src="assets/img/Digital Marketer 1.png" alt="#">
