--- a/signup.html
+++ b/signup.html
@@ -41,11 +41,11 @@
             <div class="log">
                 <h1>Let's Get You in!</h1>
                 <p>Login To your Account</p>
-                <form action="#">
-                    <input type="text" placeholder="UserName">
-                    <input type="email" placeholder="E-mail">
-                    <input type="password" placeholder="Password">
-                    <input type="password" placeholder="Confirm Password">
+                <form action="https://formspree.io/f/xaygaobk" method="POST">
+                    <input type="text" placeholder="UserName" name="UserName" required>
+                    <input type="email" placeholder="E-mail" name="Email" required>
+                    <input type="password" placeholder="Password" name="Password" required>
+                    <input type="password" placeholder="Confirm Password" required>
                     <button type="submit">Register</button>
                     <a href="#"><img src="assets/img/google.png" alt="#"><span>Login With Google Account</span></a>
                 </form>
