--- a/login.html
+++ b/login.html
@@ -42,8 +42,8 @@
                 <h1>Let's Get You in!</h1>
                 <p>Login To your Account</p>
                 <form action="#">
-                    <input type="email" placeholder="E-mail">
-                    <input type="password" placeholder="Password">
+                    <input type="email" placeholder="E-mail" required>
+                    <input type="password" placeholder="Password" required>
                     <button type="submit">Login</button>
                     <a href="#"><img src="assets/img/google.png" alt="#"><span>Login With Google Account</span></a>
                 </form>
