--- a/advertise.html
+++ b/advertise.html
@@ -44,7 +44,7 @@
             <a href="login.html" class="getbtn">Get Started</a>
         </div>
         <div class="adver-img">
-            <img src="assets/img/Digital Marketer 1.png" alt="#">
+            <img src="assets/img/DigitalMarketer1.png" alt="#">
         </div>
     </section>
 
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="rows-1">
-                    <img src="assets/img/image 64.png" alt="#">
+                    <img src="assets/img/image64.png" alt="#">
                     <div class="details">
                         <h1>Marketing & advertising</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="rows-1">
-                    <img src="assets/img/image 62.png" alt="#">
+                    <img src="assets/img/image62.png" alt="#">
                     <div class="details">
                         <h1>Ultimate development</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="rows-1">
-                    <img src="assets/img/image 58.png" alt="#">
+                    <img src="assets/img/image58.png" alt="#">
                     <div class="details">
                         <h1>Business Enterprise</h1>
                         <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
