--- a/support.html
+++ b/support.html
@@ -44,7 +44,7 @@
             <a href="login.html" class="getbtn">Get Started</a>
         </div>
         <div class="supp-img">
-            <img src="assets/img/Girl and guy preparing start-up rocket to launch with ideas.png" alt="#">
+            <img src="assets/img/Girlandguy2.png" alt="#">
         </div>
     </section>
 
@@ -55,7 +55,7 @@
         </div>
         <div class="container">
             <div class="col">
-                <img src="assets/img/Asset 4 2.png" alt="#">
+                <img src="assets/img/Asset-4-2.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col">
-                <img src="assets/img/Asset 2 1.png" alt="#">
+                <img src="assets/img/Asset-2-1.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="col">
-                <img src="assets/img/Asset 6 2.png" alt="#">
+                <img src="assets/img/Asset-6-2.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="col-final">
-                <img src="assets/img/Asset 5 2.png" alt="#">
+                <img src="assets/img/Asset-5-2.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
