--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 	<header>
 		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="#"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
-            <li><a href="support.html"><i class='bx bx-support' ></i><span>Support</span></a></li>
-            <li><a href="about.html"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
+            <li><a href="#" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="advertise.html" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
+            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="login.html" class="btn">Login</a>
-            <a href="signup.html" class="btn2">Get Started</a>
+            <a href="login.html" class="btn" aria-label="Read more">Login</a>
+            <a href="signup.html" class="btn2" aria-label="Read more">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="#">
             </div>
@@ -102,9 +102,9 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#"><i class='bx bxl-github' ></i></a>
-                        <a href="#"><i class='bx bxl-twitter' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-github' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter' ></i></a>
                     </div>
                 </div>
             </div>
@@ -115,9 +115,9 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#"><i class='bx bxl-github' ></i></a>
-                        <a href="#"><i class='bx bxl-twitter' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-github' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter' ></i></a>
                     </div>
                 </div>
             </div>
@@ -128,9 +128,9 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#"><i class='bx bxl-github' ></i></a>
-                        <a href="#"><i class='bx bxl-twitter' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-github' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter' ></i></a>
                     </div>
                 </div>
             </div>
@@ -141,14 +141,14 @@
                     <h1>Emmalee Mclain</h1>
                     <p>Product Designer</p>
                     <div class="icons">
-                        <a href="#"><i class='bx bxl-dribbble'></i></a>
-                        <a href="#"><i class='bx bxl-github' ></i></a>
-                        <a href="#"><i class='bx bxl-twitter' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-dribbble'></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-github' ></i></a>
+                        <a href="#" aria-label="Read more"><i class='bx bxl-twitter' ></i></a>
                     </div>
                 </div>
             </div>
             <div class="icon-s">
-                <a href="#"><i class='bx bxs-right-arrow' ></i></a>
+                <a href="#" aria-label="Read more"><i class='bx bxs-right-arrow' ></i></a>
             </div>
         </div>
 
@@ -196,7 +196,7 @@
                 
                     <form action="#">
                         <input type="email" placeholder="E-mail">
-                        <a href="#">Subscribe</a>
+                        <a href="#" aria-label="Read more">Subscribe</a>
                         <div class="txt3">
                             <p>Don’t provide any promotional message.</p>
                         </div>
@@ -207,44 +207,44 @@
     <footer>
         <div class="rows">
             <div class="copy">
-                <a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
+                <a href="#" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
                 <h1>Terms of use   |   Privacy</h1>
                 <p>Copyright by 2019 YourName, Inc</p>
             </div>
             <div class="det-foot">
                 <h1>About Us</h1>
                 <ul>
-                    <li><a href="#">Support Center</a></li>
-                    <li><a href="#">Customer Support</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Copyright</a></li>
+                    <li><a href="#" aria-label="Read more">Support Center</a></li>
+                    <li><a href="#" aria-label="Read more">Customer Support</a></li>
+                    <li><a href="#" aria-label="Read more">About Us</a></li>
+                    <li><a href="#" aria-label="Read more">Copyright</a></li>
                 </ul>
             </div>
             <div class="det-foot">
                 <h1>Our Information</h1>
                 <ul>
-                    <li><a href="#">Return Policy</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#" aria-label="Read more">Return Policy</a></li>
+                    <li><a href="#" aria-label="Read more">Privacy Policy</a></li>
+                    <li><a href="#" aria-label="Read more">Terms & Conditions</a></li>
+                    <li><a href="#" aria-label="Read more">Site Map</a></li>
                 </ul>
             </div>
             <div class="det-foot">
                 <h1>My Account</h1>
                 <ul>
-                    <li><a href="#">Press inquiries</a></li>
-                    <li><a href="#">Social media</a></li>
-                    <li><a href="#">directories</a></li>
-                    <li><a href="#">Images & B-roll</a></li>
+                    <li><a href="#" aria-label="Read more">Press inquiries</a></li>
+                    <li><a href="#" aria-label="Read more">Social media</a></li>
+                    <li><a href="#" aria-label="Read more">directories</a></li>
+                    <li><a href="#" aria-label="Read more">Images & B-roll</a></li>
                 </ul>
             </div>
             <div class="det-foot">
                 <h1>Connect</h1>
                 <ul>
-                    <li><a href="#"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
-                    <li><a href="#"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
-                    <li><a href="#"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
-                    <li><a href="#"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
                 </ul>
             </div>
         </div>
