--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 	<!--header--->
 	<header>
-		<a href="#" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
+		<a href="#" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
             <li><a href="#" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
             <li><a href="advertise.html" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
