--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <h1>Connect</h1>
                 <ul>
                     <li><a href="#" aria-label="Read more"><img src="assets/img/Group-3.png" alt="#">Facebook</a></li>
-                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group22.png" alt="#">Twitter</a></li>
+                    <li><a href="#" aria-label="Read more"><img src="assets/img/Group22.png" alt="#" class="tweet">Twitter</a></li>
                     <li><a href="#" aria-label="Read more"><img src="assets/img/Group-1.png" alt="#">Github</a></li>
                     <li><a href="#" aria-label="Read more"><img src="assets/img/Group-2.png" alt="#">Dribble</a></li>
                 </ul>
