--- a/login.html
+++ b/login.html
@@ -42,9 +42,9 @@
                 <h1>Let's Get You in!</h1>
                 <p>Login To your Account</p>
                 <form action="#">
-                    <input type="email" placeholder="E-mail" required>
-                    <input type="password" placeholder="Password" required>
-                    <button type="submit">Login</button>
+                    <input type="email" placeholder="E-mail" id="email">
+                    <input type="password" placeholder="Password" id="pass">
+                    <button type="submit"  id="btnlog">Login</button>
                     <a href="#"><img src="assets/img/google.png" alt="#" aria-label="Read more"><span>Login With Google Account</span></a>
                 </form>
                 <div class="reg">
@@ -57,4 +57,7 @@
             </div>
         </div>
     </section>
+
+
+    <script src="script.js"></script>
 </body>    
