--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 	<title>Digital Agency</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
@@ -41,7 +42,8 @@
             <h1>Grow your startup with our Service</h1>
             <p>Build an incredible workplace and grow your business with Gusto’s <br>all-in-one platform with amazing contents.</p>
             <div class="row">
-                <div class="rows-1">
+                <div class="rows-1" data-aos="fade-up"
+                data-aos-duration="3000">
                     <img src="assets/img/image58.png" alt="#">
                     <div class="details">
                         <h1>Marketing & advertising</h1>
@@ -49,7 +51,8 @@
                     </div>
                 </div>
 
-                <div class="rows-1">
+                <div class="rows-1" data-aos="fade-down"
+                data-aos-duration="3000">
                     <img src="assets/img/image62.png" alt="#">
                     <div class="details">
                         <h1>Ultimate development</h1>
@@ -57,7 +60,8 @@
                     </div>
                 </div>
 
-                <div class="rows-1">
+                <div class="rows-1" data-aos="fade-up"
+                data-aos-duration="3000">
                     <img src="assets/img/image64.png" alt="#">
                     <div class="details">
                         <h1>Business Enterprise</h1>
@@ -81,11 +85,15 @@
                 </div>
             </div>
         </div>
-        <div class="title-sec">
+        <div class="title-sec" data-aos="fade-left"
+        data-aos-offset="300"
+        data-aos-easing="ease-in-sine">
             <h1>Creativity starts with viewing the<br>whole world differently</h1>
             <p>A service agency with customer satisfaction</p>
             <a href="login.html" class="getbtn">Get Started</a>
-            <div class="home-img">
+            <div class="home-img" data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine">
                 <img src="assets/img/illustration.png" alt="#">
             </div>
         </div>
@@ -96,7 +104,8 @@
             <p>Build an incredible workplace and grow your business with Gusto’s <br>all-in-one platform with amazing contents.</p>
         </div>
         <div class="container">
-            <div class="col">
+            <div class="col" data-aos="fade-up"
+            data-aos-duration="3000">
                 <img src="assets/img/Asset-4-2.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
@@ -109,7 +118,8 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col" data-aos="fade-down"
+            data-aos-duration="3000">
                 <img src="assets/img/Asset-2-1.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
@@ -122,7 +132,8 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col" data-aos="fade-up"
+            data-aos-duration="3000">
                 <img src="assets/img/Asset-6-2.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
@@ -135,7 +146,8 @@
                 </div>
             </div>
 
-            <div class="col-final">
+            <div class="col-final" data-aos="fade-down"
+            data-aos-duration="3000">
                 <img src="assets/img/Asset-5-2.png" alt="#">
                 <div class="details-col">
                     <h1>Emmalee Mclain</h1>
@@ -153,18 +165,21 @@
         </div>
 
         <div class="blog">
-            <div class="title-sec">
+            <div class="title-sec" data-aos="fade-right"
+            data-aos-duration="3000">
                 <h1>Popular blog post we update everyday</h1>
                 <p>Focus only on the meaning, we take care of the design. As soon as the <br>
                     meeting end you can export in one click.</p>
             </div>
             <div class="col__blog">
-                <div class="col-blog">
+                <div class="col-blog" data-aos="fade-up"
+                data-aos-duration="3000">
                     <img src="assets/img/image.png" alt="#">
                     <h1>How to work with prototype design with adobe xd featuring tools</h1>
                     <p>The 2019 Innovation by Design Awards honor the designers and businesses solving the problems of today and tomorrow. It is one of the most sought-after design</p>
                 </div>
-                <div class="col-blog">
+                <div class="col-blog" data-aos="fade-down"
+                data-aos-duration="3000">
                     <div class="txt">
                         <h1>Antibias receives honorable gift mention at Fast Company’s most Innovation by Design Awards</h1>
                     </div>
@@ -172,7 +187,8 @@
                     <h1>Multiple arbard prototype with Figma</h1>
                     <p>Beyond launched antibias, a Chrome extension that replaces LinkedIn profile photos</p>
                 </div>
-                <div class="col-blog">
+                <div class="col-blog" data-aos="fade-up"
+                data-aos-duration="3000">
                     <div class="image">
                         <img src="assets/img/image-36.png" alt="#">
                         <h1 class="txt1">Multiple task wireframing with team management perform better</h1>
@@ -249,6 +265,8 @@
             </div>
         </div>
     </footer>
-    
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
