--- a/advertise.html
+++ b/advertise.html
@@ -8,6 +8,7 @@
 
 	<title>Digital Agency</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/advertise.css">
+    <link rel="shortcut icon" href="assets/img/Group.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<link rel="stylesheet"
@@ -23,8 +24,8 @@
 	<header>
 		<a href="index.html" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="#" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
+            <li><a href="index.html" aria-label="Read more" ><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="#" aria-label="Read more" class="active"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
             <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
             <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
         </ul>
