--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <section class="login" id="login">
 
 
-            <div class="row">
+            <div class="row1">
                 <div class="log">
                     <h1>Let's Get You in!</h1>
                     <p>Login To your Account</p>
