--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
             <div class="log">
                 <h1>Let's Get You in!</h1>
                 <h3>Login To your Account</h3>
-                <form id="account-form" action="home.html" method="GET">
+                <form id="account-form" action="login.html" method="GET">
                     <div class="form">
                         <input type="text" placeholder="UserName" name="username" id="name">
                         <p class="err-mg"></p>
